cinterion: fix propagating NULL GError

(ModemManager:2925): GLib-CRITICAL **: 09:21:32.082: g_propagate_error: assertion 'src != NULL' failed
  (ModemManager:2925): GLib-GIO-CRITICAL **: 09:21:32.083: g_task_return_error: assertion 'error != NULL' failed`

Fixes https://gitlab.freedesktop.org/mobile-broadband/ModemManager/-/issues/916